--- a/src/styles/ChoicePage.css
+++ b/src/styles/ChoicePage.css
@@ -7,7 +7,9 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
+    margin-top:10em;
+    padding:10em;
+    
   }
   
   .header-screen {
