--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -6,7 +6,9 @@
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 10px;
+    margin-top:10em;
+    padding:10em;
+    
   }
   
   .contact-header {
