--- a/src/styles/Partenariat.css
+++ b/src/styles/Partenariat.css
@@ -4,6 +4,9 @@
     margin: 0 auto;
     padding: 2rem;
     font-family: 'Arial', sans-serif;
+    margin-top:10em;
+    padding:10em;
+    
   }
   
   .header-screen {
