--- a/src/styles/CustomerSupport.css
+++ b/src/styles/CustomerSupport.css
@@ -41,12 +41,13 @@
   
   .online-green-dot {
     position: absolute;
-    top: 23px;
+    top: 20px;
     left: 12px;
     width: 12px;
     height: 12px;
     background-color: #28a745;
     border-radius: 50%;
+   gap: 2px;
   }
   
   .support-content {
@@ -60,7 +61,7 @@
   }
   
   h3 {
-    font-size: 20px;
+    font-size: 18px;
     color: #333;
     margin-bottom: 5px;
     margin-left: 10px;
@@ -77,7 +78,7 @@
     overflow-y: auto;
     padding-right: 10px;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     max-height: calc(100% - 120px);
   }
   
