--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -51,3 +51,14 @@
       text-align: center;
   }
 }
+.footer-content>a{
+  text-decoration: none;
+  color: #ddd;
+
+
+}
+.footer-content>a:hover{
+  text-decoration: underline;
+  padding: 5px;
+
+}
