--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -1,8 +1,10 @@
-/* General Styles for Forum */
+
 .forum-container {
   display: flex;
   font-family: Arial, sans-serif;
   padding: 20px;
+  flex-direction: row;
+  margin-top:5em;
 }
 
 .forum-sidebar {
@@ -55,6 +57,44 @@
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .forum-container {
+    flex-direction: column;
+    padding: 12px;
+    margin-top:10em;
+  }
+
+  .forum-sidebar {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
+  .forum-sidebar.collapsed {
+    width: 100%;
+  }
+
+  .forum-sidebar h3 {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .forum-sidebar-item {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .forum-sidebar-item .icon {
+    margin-right: 8px;
+    font-size: 18px;
+  }
+
+  .menu-toggle {
+    display: none;
+  }
 }
 
 .forum-main {
@@ -70,9 +110,9 @@
 }
 
 .forum-posts {
-  overflow-y: auto; /* Enable vertical scrolling */
-  max-height: 500px; /* Set a maximum height for the posts section */
-  padding-right: 15px; /* Prevent scrollbar from overlapping content */
+  overflow-y: auto;
+  max-height: 500px;
+  padding-right: 15px;
 }
 
 .forum-post {
@@ -117,7 +157,6 @@
   color: #c82333;
 }
 
-/* Post Creation Form */
 .create-post {
   background-color: #fff;
   padding: 20px;
@@ -172,9 +211,6 @@
   background-color: #218838;
 }
 
-
-
-/* Comment Section */
 .comment-section {
   margin-top: 15px;
   display: flex;
@@ -258,4 +294,9 @@
   color: #333;
   line-height: 1.5;
   margin-top: 5px;
+}
+
+.auth-message>span {
+  font-weight: bold;
+  font-size: 20px;
 }
