--- a/src/styles/Partenariat.css
+++ b/src/styles/Partenariat.css
@@ -110,8 +110,9 @@ input:focus {
 .ads-container {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
   margin-top: 30px;
+  padding: 20px;
 }
 
 .ad-banner {
