--- a/src/styles/Application.css
+++ b/src/styles/Application.css
@@ -4,6 +4,7 @@
     height: 100vh;
     overflow: hidden;
     font-family: Arial, sans-serif;
+    margin-top: 11em;
   }
   
   .application-content {
